--- a/client/src/pages/Lobby.css
+++ b/client/src/pages/Lobby.css
@@ -1,6 +1,21 @@
 .lobby {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
   height: 100vh;
   margin-left: 10%;
   margin-right: 10%;
   background-color: rgba(0, 0, 0, 0.3);
+}
+
+img {
+  height: 350px;
+}
+
+.player-lobby {
+  text-align: center;
+}
+
+.fighter2 {
+  transform: scaleX(-1);
 }
