--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,7 @@ html,
 body {
   height: 100vh;
   width: 100vw;
-
+  overflow: hidden;
   margin: 0;
   color: white;
   background-color: rgb(164, 164, 250);
