--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,7 @@ body {
   overflow: hidden;
   margin: 0;
   color: white;
-  background-image: linear-gradient(steelblue, white);
+  background-image: linear-gradient(white, steelblue);
 }
 
 .main-menu {
@@ -18,6 +18,7 @@ body {
 .logo {
   font-size: 24pt;
   margin: 0;
+  margin-top: -20px;
   color: black;
   font-family: "Bungee", cursive;
   margin-left: 15px;
@@ -115,4 +116,29 @@ body {
   background-color: rgba(12, 12, 12, 0.75);
   cursor: pointer;
   border: 1px black solid;
+}
+
+.refresh-btn {
+  position: absolute;
+  border-radius: 10px;
+  border: black solid 2px;
+  color: white;
+  right: 0;
+  top: -55px;
+  width: 45px;
+  height: 3em;
+  background-color: rgb(0, 0, 0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.refresh-btn:hover {
+  color: black;
+  background-color: white;
+  cursor: pointer;
+}
+
+.refresh-btn:active {
+  background-color: gray;
 }
