minor styles changes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -135,9 +135,8 @@ body {
 
 .refresh-btn:hover {
   color: white;
-  background-color: black;
+  background-color: grey;
   cursor: pointer;
-  border: none;
 }
 
 .refresh-btn:active {
