--- a/client/src/components/Lobby.css
+++ b/client/src/components/Lobby.css
@@ -25,6 +25,18 @@ img {
   font-size: 28pt;
 }
 
+.player0 {
+  font-family: "Bungee Outline", cursive;
+  color: rgb(25, 0, 255);
+  font-size: 28pt;
+}
+
+.player1 {
+  font-family: "Bungee Outline", cursive;
+  color: rgb(255, 0, 0);
+  font-size: 28pt;
+}
+
 /* .fighter1 {
 } */
 
@@ -112,9 +124,9 @@ img {
 }
 
 .exit-btn:hover {
-  background-color: rgba(12, 12, 12, 0.75);
+  background-color: grey;
   cursor: pointer;
-  border: 1px black solid;
+  border: none;
 }
 
 .ready {
@@ -154,7 +166,7 @@ img {
 .ready-btn:hover {
   background-color: grey;
   cursor: pointer;
-  border: 2px black solid;
+  border: none;
 }
 
 .ready-count {
