--- a/client/src/App.css
+++ b/client/src/App.css
@@ -142,3 +142,13 @@ body {
 .refresh-btn:active {
   background-color: gray;
 }
+
+.game-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.map {
+  position: relative;
+}
