--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,9 +10,10 @@ body {
 
 .main-menu {
   height: 100vh;
-  margin: 1%;
   display: flex;
   flex-direction: column;
+  gap: 75px;
+  margin-top: 50px;
 }
 
 .logo {
@@ -31,24 +32,31 @@ body {
 }
 
 .main-menu > button {
+  margin-left: 50px;
   background-color: rgb(12, 12, 12);
-  margin-top: 100px;
-  width: fit-content;
-  padding: 0px 25px;
   border-radius: 10px;
+  width: fit-content;
+  padding: 0px 20px;
   border: 1px grey solid;
-  font-size: 21pt;
+  font-size: 24pt;
   color: white;
   font-family: "Bungee", cursive;
-  text-align: start;
-  margin-left: 20px;
   cursor: pointer;
+}
+
+#closed {
+  opacity: 0.4;
+  cursor: default;
+}
+
+#closed:hover {
+  opacity: 0.4;
+  background-color: rgb(12, 12, 12);
 }
 
 .main-menu > button:hover {
   background-color: gray;
   cursor: pointer;
-  border: 1px black solid;
 }
 
 .rooms {
