enhanced input system

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -159,7 +159,7 @@ body {
   height: 750px;
   min-width: 1350px;
   min-height: 750px;
-  background-image: url("./assets/mapZoni.jpg");
+  background-image: url("./assets/map.gif");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
