--- a/client/src/App.css
+++ b/client/src/App.css
@@ -159,8 +159,8 @@ body {
   height: 750px;
   min-width: 1350px;
   min-height: 750px;
-  background-image: url("./assets/map.gif");
-  background-position: center;
+  background-image: url("./assets/boxing.gif");
+  background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
   box-shadow: 0px 0px 4px 4px black;
