--- a/client/src/components/Lobby.css
+++ b/client/src/components/Lobby.css
@@ -1,8 +1,12 @@
 .lobby {
   display: flex;
-  justify-content: space-between;
+  gap: 500px;
   align-items: center;
-  height: 80vh;
+  justify-content: center;
+  width: 1350px;
+  height: 750px;
+  min-width: 1350px;
+  min-height: 750px;
   margin-left: 13%;
   margin-right: 13%;
   position: relative;
@@ -14,9 +18,15 @@ img {
 }
 
 .player-lobby {
-  text-align: center;
-  margin-left: 100px;
-  margin-right: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 375px;
+}
+
+.waiting {
+  font-family: "Bungee", Arial;
+  font-size: 1.5em;
 }
 
 .player-side {
@@ -29,12 +39,14 @@ img {
   font-family: "Bungee Outline", cursive;
   color: rgb(25, 0, 255);
   font-size: 28pt;
+  text-align: center;
 }
 
 .player1 {
   font-family: "Bungee Outline", cursive;
   color: rgb(255, 0, 0);
   font-size: 28pt;
+  text-align: center;
 }
 
 /* .fighter1 {
@@ -46,7 +58,6 @@ img {
 
 .select-penguin-txt {
   position: absolute;
-  left: 0;
   top: 0;
   font-size: 34pt;
   color: rgb(31, 31, 31);
@@ -61,19 +72,13 @@ img {
   color: black;
   font-family: "Bungee Outline", cursive;
   position: absolute;
-  margin-left: auto;
-  margin-right: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   gap: 30px;
-  left: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.349);
   width: fit-content;
   padding: 50px;
-  box-shadow: 0px 0px 2px 3px black;
 }
 
 .fighter-select > button {
@@ -85,7 +90,6 @@ img {
   align-items: center;
   background-color: black;
   border-radius: 50%;
-  box-shadow: 0px 0px 1px 1px black;
 }
 
 .fighter-select > button:hover {
@@ -131,15 +135,11 @@ img {
 
 .ready {
   width: fit-content;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 30px;
-  margin-left: auto;
-  margin-right: auto;
   display: flex;
   flex-direction: column;
   gap: 20px;
+  position: absolute;
+  bottom: 30px;
 }
 
 .ready-btn {
