--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,6 +22,7 @@ body {
   color: black;
   font-family: "Bungee", cursive;
   margin-left: 15px;
+  margin-bottom: 50px;
 }
 
 .pow {
@@ -35,9 +36,9 @@ body {
   background-color: rgb(12, 12, 12);
   border-radius: 10px;
   width: fit-content;
-  padding: 0px 20px;
+  padding: 5px 20px;
   border: 1px grey solid;
-  font-size: 24pt;
+  font-size: 2em;
   color: white;
   font-family: "Bungee", cursive;
   cursor: pointer;
@@ -163,4 +164,8 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   box-shadow: 0px 0px 4px 4px black;
+}
+
+.game-container > [src*="daibaStanding"] {
+  height: 165px;
 }
