--- a/client/src/components/Lobby.css
+++ b/client/src/components/Lobby.css
@@ -69,47 +69,44 @@ img {
 }
 
 .fighter-select {
-  color: black;
   font-family: "Bungee Outline", cursive;
   position: absolute;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   text-align: center;
-  gap: 30px;
-  width: fit-content;
-  padding: 50px;
 }
 
-.fighter-select > button {
-  height: 118px;
-  width: 118px;
-  border: black solid 1px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: black;
-  border-radius: 50%;
-}
-
-.fighter-select > button:hover {
+.fighter-select > img:hover {
   border: white solid 2px;
   box-shadow: 0px 0px 2px 2px white;
   background-color: black;
   cursor: pointer;
 }
 
-.lil-dinkey:active,
+.dinkey:active,
 .daiba:active {
   box-shadow: 0px 0px 2px 2px white;
   background-color: black;
   cursor: pointer;
 }
 
-.lil-dinkey,
+.dinkey,
 .daiba {
-  border: black solid 1px;
+  border: black solid 2px;
   border-radius: 50%;
+  position: relative;
+}
+
+.dinkey-name,
+.daiba-name {
+  position: relative;
+  font-size: 1em;
+  color: black;
+  font-family: "Bungee", cursive;
+  margin-top: -20px;
+
+  z-index: 99;
+}
+
+.fighter-container {
 }
 
 #ellipses {
