--- a/client/src/App.css
+++ b/client/src/App.css
@@ -106,7 +106,7 @@ body {
   position: absolute;
   left: -300px;
   bottom: -10px;
-  background-color: red;
+  background-color: black;
   margin-top: 100px;
   width: fit-content;
   padding: 0px 25px;
