--- a/client/src/components/Lobby.css
+++ b/client/src/components/Lobby.css
@@ -1,77 +1,100 @@
 .lobby {
   display: flex;
-  gap: 500px;
+  color: black;
   align-items: center;
   justify-content: center;
-  width: 1350px;
-  height: 750px;
-  min-width: 1350px;
-  min-height: 750px;
-  margin-left: 13%;
-  margin-right: 13%;
+  width: 1280px;
+  height: 720px;
+  min-width: 1280px;
+  min-height: 720px;
   position: relative;
   margin-top: -50px;
-}
-
-img {
-  height: 350px;
+  align-self: center;
+  gap: 150px;
 }
 
 .player-lobby {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 375px;
+  align-self: flex-start;
+  width: 215px;
 }
 
 .waiting {
   font-family: "Bungee", Arial;
-  font-size: 1.5em;
+  font-size: 1em;
+  width: 220px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  color: rgb(0, 0, 0);
+  margin-top: -250px;
 }
 
 .player-side {
   font-family: "Bungee Outline", cursive;
   color: black;
   font-size: 28pt;
+  text-align: center;
 }
 
 .player0 {
   font-family: "Bungee Outline", cursive;
-  color: rgb(25, 0, 255);
-  font-size: 28pt;
-  text-align: center;
+  color: rgb(0, 238, 255);
 }
 
 .player1 {
   font-family: "Bungee Outline", cursive;
-  color: rgb(255, 0, 0);
+  color: purple;
   font-size: 28pt;
   text-align: center;
 }
 
-/* .fighter1 {
-} */
+.player2 {
+  font-family: "Bungee Outline", cursive;
+  color: rgb(245, 190, 71);
+}
+
+.fighter1,
+.fighter2,
+.fighter3 {
+  height: 220px;
+}
 
 .fighter2 {
   transform: scaleX(-1);
 }
 
-.select-penguin-txt {
+.select-penguin-container {
   position: absolute;
-  top: 0;
-  font-size: 34pt;
-  color: rgb(31, 31, 31);
+  bottom: -10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.select-penguin-txt {
+  font-size: 2.1em;
+  font-weight: 400;
+  color: rgb(255, 255, 255);
   font-family: "Bungee", cursive;
-  width: 100%;
-  height: 100px;
+  width: 400px;
   text-align: center;
   border-bottom: 2px black solid;
 }
 
 .fighter-select {
   font-family: "Bungee Outline", cursive;
-  position: absolute;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  height: 200px;
+  width: 300px;
 }
 
 .fighter-select > img:hover {
@@ -98,16 +121,14 @@ img {
 .dinkey-name,
 .daiba-name {
   position: relative;
-  font-size: 1em;
   color: black;
+  font-size: 1em;
   font-family: "Bungee", cursive;
-  margin-top: -20px;
-
   z-index: 99;
 }
 
-.fighter-container {
-}
+/* .fighter-container {
+} */
 
 #ellipses {
   height: 7px;
@@ -116,8 +137,8 @@ img {
 .exit-btn {
   position: absolute;
   bottom: 0;
-  left: -150px;
-  background-color: red;
+  left: 0;
+  background-color: black;
   padding-left: 20px;
   padding-right: 20px;
   border-radius: 10px;
@@ -140,7 +161,9 @@ img {
   flex-direction: column;
   gap: 20px;
   position: absolute;
-  bottom: 30px;
+  right: 0px;
+  bottom: 20px;
+  right: 150px;
 }
 
 .ready-btn {
@@ -154,10 +177,109 @@ img {
   border: 2px black solid;
   color: white;
   font-family: "Bungee", cursive;
+  animation: logo-animation linear 4s;
+  animation-iteration-count: infinite;
+  transform-origin: 50% 50%;
+  -webkit-animation: logo-animation linear 4s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-transform-origin: 50% 50%;
+  -moz-animation: logo-animation linear 4s;
+  -moz-animation-iteration-count: infinite;
+  -moz-transform-origin: 50% 50%;
+  -o-animation: logo-animation linear 4s;
+  -o-animation-iteration-count: infinite;
+  -o-transform-origin: 50% 50%;
+  -ms-animation: logo-animation linear 4s;
+  -ms-animation-iteration-count: infinite;
+  -ms-transform-origin: 50% 50%;
+}
+
+@keyframes logo-animation {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.3;
+  }
+  100% {
+    opacity: 0.990099773451273;
+  }
+  101% {
+    opacity: 0.99;
+  }
+}
+
+@-moz-keyframes logo-animation {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.3;
+  }
+  100% {
+    opacity: 0.990099773451273;
+  }
+  101% {
+    opacity: 0.99;
+  }
+}
+
+@-webkit-keyframes logo-animation {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.3;
+  }
+  100% {
+    opacity: 0.990099773451273;
+  }
+  101% {
+    opacity: 0.99;
+  }
+}
+
+@-o-keyframes logo-animation {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.3;
+  }
+  100% {
+    opacity: 0.990099773451273;
+  }
+  101% {
+    opacity: 0.99;
+  }
+}
+
+@-ms-keyframes logo-animation {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.3;
+  }
+  100% {
+    opacity: 0.990099773451273;
+  }
+  101% {
+    opacity: 0.99;
+  }
 }
 
 #cancel-btn {
   background-color: red;
+  width: 200px;
+  height: 100px;
+  font-size: 28pt;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 10px;
+  border: 2px black solid;
+  font-family: "Bungee", Arial;
+  color: white;
 }
 
 #cancel-btn:hover {
