--- a/client/src/components/Lobby.css
+++ b/client/src/components/Lobby.css
@@ -83,7 +83,7 @@
   font-family: "Bungee", cursive;
   width: 400px;
   text-align: center;
-  border-bottom: 2px black solid;
+  border-bottom: 2px white solid;
 }
 
 .fighter-select {
