--- a/client/src/components/Lobby.css
+++ b/client/src/components/Lobby.css
@@ -66,9 +66,8 @@
   height: 220px;
 }
 
-.fighter2 {
-  transform: scaleX(-1);
-}
+/* .fighter2 {
+} */
 
 .select-penguin-container {
   position: absolute;
