--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,11 +18,10 @@ body {
 .logo {
   font-size: 24pt;
   margin: 0;
-
   color: black;
   font-family: "Bungee", cursive;
   margin-left: 15px;
-  margin-bottom: 50px;
+  padding-bottom: 75px;
 }
 
 .pow {
@@ -192,16 +191,16 @@ body {
   overflow: hidden;
   position: relative;
   align-self: center;
-  width: 100em;
-  height: 50em;
-  min-width: 100em;
-  min-height: 50em;
+  width: 85em;
+  height: 45em;
+  min-width: 85em;
+  min-height: 45em;
   background-image: url(./assets/snow-map.gif);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   box-shadow: 0px 0px 4px 4px black;
-  margin-top: -50px;
+  margin-top: -60px;
 }
 
 .game-container > [src*="daibaStanding"] {
