death animation for daiba

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -217,6 +217,11 @@ body {
   height: 120px;
 }
 
+.game-container > [src*="daibaDeath"] {
+  height: 90px;
+  opacity: 0.9;
+}
+
 .game-container > [src*="standing"] {
   height: 160px;
 }
