--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,7 @@ body {
   overflow: hidden;
   margin: 0;
   color: white;
-  background-image: url("./assets/game-map-old.png");
+  background-image: linear-gradient(aqua, LightSkyBlue, black);
 }
 
 .main-menu {
@@ -178,11 +178,23 @@ body {
   width: 150px;
   height: 25px;
   border: black solid 3px;
+  position: relative;
+  z-index: 1;
 }
 
-.ui-player-health {
-  background-color: rgb(0, 255, 0);
+.ui-player-health-red,
+.ui-player-health-green {
   height: 100%;
+}
+
+.ui-player-health-red {
+  position: absolute;
+  z-index: 2;
+}
+
+.ui-player-health-green {
+  position: absolute;
+  z-index: 99;
 }
 
 .game-container {
@@ -193,7 +205,7 @@ body {
   height: 45em;
   min-width: 85em;
   min-height: 45em;
-  background-image: url(./assets/snow-map.gif);
+  background-image: url(./assets/game-map.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -202,23 +214,23 @@ body {
 }
 
 .game-container > [src*="daibaStanding"] {
-  height: 135px;
+  height: 165px;
 }
 
 .game-container > [src*="daibaDiving"] {
-  height: 120px;
+  height: 130px;
 }
 
 .game-container > [src*="daibaJumping"] {
-  height: 150px;
+  height: 180px;
 }
 
 .game-container > [src*="daibaHit"] {
-  height: 135px;
+  height: 165px;
 }
 
 .game-container > [src*="daibaDeath"] {
-  height: 90px;
+  height: 100px;
   opacity: 0.7;
 }
 
