--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,40 +5,67 @@ body {
   overflow: hidden;
   margin: 0;
   color: white;
-  background-color: #121213;
+  background-color: #ffebb6;
 }
 
 .main-menu {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  gap: 80px;
+  justify-content: center;
+  gap: 85px;
+  margin-top: 1rem;
+  z-index: 1;
 }
 
 .logo {
-  font-size: 24pt;
+  position: absolute;
+  top: 0.5rem;
+  left: 0.25rem;
+  font-size: 2.5rem;
   margin: 0;
-  color: white;
+  color: black;
   font-family: "Bungee", cursive;
   margin-left: 15px;
-  padding-bottom: 75px;
+  cursor: pointer;
 }
 
 .pow {
-  font-size: 34pt;
+  font-size: 2.5rem;
   color: red;
   font-family: "Bungee Shade", cursive;
 }
 
-.main-menu > button {
+.sumo {
+  position: absolute;
+  right: -250px;
+}
+
+.main-menu-btn-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  margin-top: -4rem;
+}
+
+#play {
+  font-size: 6rem;
+  color: rgb(255, 0, 0);
+}
+
+#play:hover {
+  color: maroon;
+}
+
+.main-menu-btn-container > button {
   margin-left: 50px;
-  background-color: rgb(12, 12, 12);
+  background-color: none;
+  background: none;
   border-radius: 10px;
   width: fit-content;
-  padding: 5px 20px;
   border: none;
-  font-size: 2em;
-  color: white;
+  font-size: 2.5rem;
+  color: black;
   font-family: "Bungee", cursive;
   cursor: pointer;
 }
@@ -50,24 +77,25 @@ body {
 
 #closed:hover {
   opacity: 0.4;
-  background-color: rgb(12, 12, 12);
+  color: black;
 }
 
-.main-menu > button:hover {
-  background-color: gray;
+.main-menu-btn-container > button:hover {
+  color: white;
   cursor: pointer;
 }
 
 .rooms {
   display: flex;
   flex-direction: column;
-  margin-top: -25px;
-  background-color: black;
-  height: 600px;
-  width: 800px;
+  background-color: rgb(22, 22, 22);
+  height: 500px;
+  width: 80%;
+  max-width: 800px;
   align-self: center;
   padding: 25px;
   border: solid grey 3px;
+  border-radius: 1%;
   position: relative;
   font-family: cursive;
 }
@@ -76,7 +104,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 12pt;
+  font-size: 1.6rem;
   border-top: grey solid 1px;
   border-bottom: grey solid 1px;
   flex-grow: 1;
@@ -85,13 +113,12 @@ body {
 
 .room > button {
   margin: 10px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 10px 25px;
   background-color: green;
   border: none;
   border-radius: 5%;
   color: white;
-  font-size: 21pt;
+  font-size: 1.6rem;
   cursor: pointer;
   font-family: "Bungee", cursive;
   text-align: center;
@@ -101,23 +128,32 @@ body {
   background-color: rgba(0, 128, 0, 0.35);
 }
 
+.room-id {
+  font-family: "Bungee";
+  font-size: 1.6rem;
+}
+
+.room-count {
+  font-family: Tahoma, sans-serif;
+  font-size: 1.3rem;
+}
+/* 
 .back-btn {
   position: absolute;
   left: -300px;
   bottom: -10px;
   background-color: black;
   margin-top: 100px;
-  width: fit-content;
-  padding: 0px 25px;
+  padding: 5px 25px;
   border-radius: 10px;
   border: 1px black solid;
-  font-size: 21pt;
+  font-size: 1.6rem;
   color: white;
   font-family: "Bungee", cursive;
   text-align: start;
   margin-left: 20px;
   cursor: pointer;
-}
+} */
 
 .back-btn:hover {
   background-color: gray;
@@ -128,13 +164,13 @@ body {
 .refresh-btn {
   position: absolute;
   border-radius: 10px;
-  border: black solid 2px;
-  color: black;
+  border: none;
+  color: white;
   right: 0;
   top: -55px;
   width: 45px;
   height: 3em;
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -201,16 +237,13 @@ body {
   overflow: hidden;
   position: relative;
   align-self: center;
-  width: 85em;
-  height: 45em;
-  min-width: 85em;
-  min-height: 45em;
+  width: 1140px;
+  height: 680px;
   background-image: url(./assets/game-map.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   border: solid 4px black;
-  margin-top: -10px;
 }
 
 .game-container > [src*="daibaStanding"] {
