--- a/client/src/components/Lobby.css
+++ b/client/src/components/Lobby.css
@@ -1,16 +1,27 @@
 .lobby {
   display: flex;
-  color: black;
-  align-items: center;
-  justify-content: center;
-  width: 1140px;
-  height: 680px;
+  flex-direction: column;
   position: relative;
   align-self: center;
-  gap: 150px;
-  background-image: linear-gradient(tan, white, tan, black);
-  border: black 2px solid;
+  width: 1140px;
+  height: 680px;
+  background-image: linear-gradient(white, white, white, black);
+  border: black 1px solid;
   border-radius: 0.5rem;
+  box-shadow: 0px 0px 2px 1px black;
+}
+
+.lobby-fighters-container {
+  display: flex;
+  color: black;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  padding-top: 8rem;
+  position: relative;
+  align-self: center;
+  gap: 450px;
+  background-color: rgba(0, 221, 255, 0.292);
 }
 
 .player-lobby {
@@ -19,6 +30,24 @@
   align-items: center;
   align-self: flex-start;
   width: 215px;
+}
+
+.kana1,
+.kana2 {
+  color: rgb(45, 45, 45);
+  font-size: 10rem;
+}
+
+.kana1 {
+  position: absolute;
+  text-align: center;
+  top: -5rem;
+}
+
+.kana2 {
+  position: absolute;
+  text-align: center;
+  top: 7rem;
 }
 
 .waiting {
@@ -30,7 +59,8 @@
   align-items: center;
   gap: 5px;
   color: black;
-  margin-top: -250px;
+  margin-right: 4rem;
+  margin-top: 4rem;
 }
 
 .player-side {
@@ -42,25 +72,24 @@
 
 .player0 {
   font-family: "Bungee Outline", cursive;
-  color: rgb(0, 238, 255);
+  color: blue;
 }
 
 .player1 {
   font-family: "Bungee Outline", cursive;
-  color: rgb(245, 190, 71);
+  color: red;
   font-size: 28pt;
   text-align: center;
 }
 
-.player2 {
-  font-family: "Bungee Outline", cursive;
-  color: purple;
+.fighter1,
+.fighter2 {
+  height: 220px;
+  margin-bottom: -5rem;
 }
 
-.fighter1,
-.fighter2,
-.fighter3 {
-  height: 220px;
+.fighter1 {
+  transform: scaleX(-1);
 }
 
 /* .fighter2 {
@@ -138,8 +167,7 @@
   bottom: 84px;
   left: 100px;
   background-color: black;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 1rem 2rem;
   border-radius: 10px;
   border: none;
   font-size: 21pt;
@@ -158,23 +186,19 @@
   width: fit-content;
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  position: absolute;
-  right: 0px;
-  bottom: 80px;
-  right: 110px;
+  gap: 15px;
+  align-self: center;
+  margin-top: 9rem;
 }
 
 .ready-btn {
-  width: 200px;
-  height: 100px;
-  font-size: 28pt;
-  background-color: green;
-  padding-left: 20px;
-  padding-right: 20px;
+  font-size: 3rem;
+  background-color: forestgreen;
+  padding: 1rem 2rem;
   border-radius: 10px;
-  border: 2px black solid;
+  border: none;
   color: white;
+  cursor: pointer;
   font-family: "Bungee", cursive;
   animation: logo-animation linear 4s;
   animation-iteration-count: infinite;
@@ -270,32 +294,20 @@
 
 #cancel-btn {
   background-color: red;
-  width: 200px;
-  height: 100px;
-  font-size: 28pt;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 1rem 2rem;
+  border: none;
+  font-size: 3rem;
   border-radius: 10px;
-  border: 2px black solid;
   font-family: "Bungee", Arial;
   color: white;
-}
-
-#cancel-btn:hover {
-  background-color: grey;
-}
-
-.ready-btn:hover {
-  background-color: grey;
   cursor: pointer;
-  border: none;
 }
 
 .ready-count {
-  color: black;
-  font-family: cursive;
+  color: white;
+  font-family: Tahoma, sans-serif;
   text-align: center;
-  font-size: 18pt;
+  font-size: 1.25rem;
 }
 
 /* .avatar {
