--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,7 +20,7 @@ body {
 
 .logo {
   position: absolute;
-  top: 0.5rem;
+  top: 0;
   left: 0.25rem;
   font-size: 2.5rem;
   margin: 0;
@@ -38,13 +38,13 @@ body {
 
 .sumo {
   position: absolute;
-  right: -250px;
+  right: -15rem;
+  bottom: -8rem;
 }
 
 .main-menu-btn-container {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
   margin-top: -4rem;
 }
 
@@ -64,10 +64,14 @@ body {
   border-radius: 10px;
   width: fit-content;
   border: none;
-  font-size: 2.5rem;
+  font-size: 2.2rem;
   color: black;
   font-family: "Bungee", cursive;
   cursor: pointer;
+}
+
+.main-menu-btn-container > :nth-child(2) {
+  margin-top: -4rem;
 }
 
 #closed {
@@ -241,7 +245,7 @@ body {
   position: relative;
   align-self: center;
   width: 1300px;
-  height: 700px;
+  height: 720px;
   background-image: url(./assets/game-map.png);
   background-repeat: no-repeat;
   background-size: cover;
