--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,8 +46,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 1rem;
-  margin-top: -4rem;
+  gap: 15px;
 }
 
 #play {
@@ -201,6 +200,10 @@ body {
 
 .ui-container {
   height: fit-content;
+}
+
+.wins {
+  font-size: 1000px;
 }
 
 .ui-player-container {
