--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,12 +46,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 15px;
+  gap: -50px;
 }
 
 #play {
   font-size: 6rem;
   color: rgb(255, 0, 0);
+  margin-bottom: -2rem;
 }
 
 #play:hover {
@@ -59,13 +60,13 @@ body {
 }
 
 .main-menu-btn-container > button {
-  margin-left: 25px;
+  margin-left: 30px;
   background-color: none;
   background: none;
   border-radius: 10px;
   width: fit-content;
   border: none;
-  font-size: 2.2rem;
+  font-size: 2rem;
   color: black;
   font-family: "Bungee", cursive;
   cursor: pointer;
@@ -74,6 +75,7 @@ body {
 #closed {
   opacity: 0.4;
   cursor: default;
+  margin-top: -1rem;
 }
 
 #closed:hover {
