added new sounds, gif optimizations

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,8 +45,8 @@ body {
 .main-menu-btn-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  gap: -50px;
+
+  width: fit-content;
 }
 
 #play {
